welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: not found: value cigers
  if (cigers<61 & cigers>39 &!isWeekend || cigers>39 & isWeekend  ){
      ^cigarParty:2: error: not found: value cigers
  if (cigers<61 & cigers>39 &!isWeekend || cigers>39 & isWeekend  ){
                  ^cigarParty:2: error: not found: value cigers
  if (cigers<61 & cigers>39 &!isWeekend || cigers>39 & isWeekend  ){
                                           ^