welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
  if (cigers<61 & cigers>39 &!isWeekend || cigers>39 & isWeekend  ){
    return true
  }
  return false
}